--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
 baseurl: "/adam-blog" # the subpath of your site, e.g. /blog
-url: "https://leach-chen.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://leach-chen.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author settings
 author: Adam Neilson # add your name
@@ -39,7 +39,7 @@ paginate_path: /page:num/
 
 # Build settings
 markdown: kramdown
-gems:
+plugins:
   - jekyll-paginate
   - jekyll-feed
   - jekyll-sitemap
