--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://leach-chen.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/adam-blog" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author settings
 author: Adam Neilson # add your name
@@ -39,7 +39,7 @@ paginate_path: /page:num/
 
 # Build settings
 markdown: kramdown
-plugins:
+gems:
   - jekyll-paginate
   - jekyll-feed
   - jekyll-sitemap
