--- a/adam-blog/_config.yml
+++ b/adam-blog/_config.yml
@@ -39,7 +39,7 @@ paginate_path: /page:num/
 
 # Build settings
 markdown: kramdown
-gems:
+plugins:
   - jekyll-paginate
   - jekyll-feed
   - jekyll-sitemap
