--- a/_config.yml
+++ b/_config.yml
@@ -49,3 +49,13 @@ plugins:
 
 include: [_pages]
 exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock"]
+
+
+
+links:
+  - name:         Home
+    url:          /
+    external:     false
+  - name:         About
+    url:          /About
+    external:     false
