--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ csdn: http://blog.csdn.net/chenliqiang12345678
 mailchimp: # Add your MailChimp form identifier.
 
 # Disqus
-discus_identifier: mr-brown # Add your discus identifier
+discus_identifier: leach-chen # Add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
