--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,9 @@ intensedebate_identifier: 1ce8d80a5f6d373a46f4ceaf3dff8859
 google-analysis: UA-113644888-1
 baidu-analysis: 56385150d223d3a72bebe8a0d4a94e19
 
+#youyan
+youyan-id: 2157296
+
 # Paginate
 paginate: 18
 paginate_path: /page:num/
