--- a/_config.yml
+++ b/_config.yml
@@ -93,6 +93,10 @@ links1:
     url:          /blog/android
     type:         androidoriginal
     external:     false
+  - name:         Python
+    url:          /blog/python
+    type:         python
+    external:     false
   - name:         测试相关
     url:          /blog/abouttest
     type:         abouttest
@@ -112,7 +116,7 @@ blog_4:    androidoriginal
 blog_5:    abouttest
 blog_6:    stock
 blog_7:    other
-blog_8:
+blog_8:    python
 blog_9:
 blog_10:
 blog_11:
