--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 author: Leach Chen
 
 author-pic: leach-face.jpg
-about-author: I will add description latter.
+about-author: I am an Android developer.I will add description latter.
 
 #修改成你自己的
 # Contact links
