--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ instagram: # Add your Instagram handle
 pinterest: # Add your Pinterest handle
 
 #修改成你自己的
-email: leach.chen@gmail.com
+email: 349763031@qq.com
 phone: 00000000
 github: https://github.com/leach-chen
 jianshu: https://www.jianshu.com/users/5cc3aae52717/timeline
